@@ -46,7 +46,7 @@ class CSSFontFaceRule(cssrule.CSSRule):
         if style:
             self.style = style
         else:
-            self.style = CSSStyleDeclaration(parentRule=self)
+            self.style = CSSStyleDeclaration()
         
         self._readonly = readonly
         
